--- a/src/Presentation/SmartStore.Web/Administration/Content/variables.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/variables.less
@@ -124,12 +124,12 @@
 @dropdownDividerTop:            #e5e5e5;
 @dropdownDividerBottom:         @white;
 
-@dropdownLinkColor:             @grayDark;
+@dropdownLinkColor:             @gray;
 
-@dropdownLinkColorHover:        @white;
-@dropdownLinkColorActive:       @white; // @dropdownLinkColor;
-@dropdownLinkBackgroundActive:  #f9980f; //@linkColor;
-@dropdownLinkBackgroundHover:   @dropdownLinkBackgroundActive;
+@dropdownLinkColorHover:        #333; //#fff; //@grayDark;
+@dropdownLinkColorActive:       #333; //#fff;
+@dropdownLinkBackgroundActive:  #f5f5f5; //#444;
+@dropdownLinkBackgroundHover:   #f5f5f5; //#444; //@dropdownLinkBackgroundActive;
 
 
 
