--- a/src/Presentation/SmartStore.Web/Administration/Views/Campaign/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Campaign/List.cshtml
@@ -6,7 +6,7 @@
 }
 <div class="section-header">
     <div class="title">
-        <i class="icon icon-envelope-alt"></i>
+        <i class="icon icon-bullhorn"></i>
         @T("Admin.Promotions.Campaigns")
     </div>
     <div class="options">
