--- a/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/Index.cshtml
@@ -9,7 +9,7 @@
 {
 	<div class="section-header">
 		<div class="title">
-			<i class="icon icon-picture"></i>
+			<i class="icon icon-ellipsis-horizontal"></i>
 			@T("Admin.Configuration.ContentSlider")
 		</div>
 		<div class="options">
