--- a/src/Presentation/SmartStore.Web/Administration/Views/Customer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Customer/List.cshtml
@@ -11,7 +11,7 @@
 {
     <div class="section-header">
         <div class="title">
-            <i class="icon icon-group"></i>
+            <i class="icon icon-user"></i>
             @T("Admin.Customers.Customers")
         </div>
         <div class="options">
