--- a/src/Presentation/SmartStore.Web/Administration/Views/Customer/Reports.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Customer/Reports.cshtml
@@ -6,7 +6,7 @@
 @using Telerik.Web.Mvc.UI
 <div class="section-header">
     <div class="title">
-        <i class="icon icon-group"></i>
+        <i class="icon icon-bar-chart"></i>
         @T("Admin.Customers.Reports")
     </div>
     <div class="options">
