--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
@@ -8,7 +8,7 @@
 }
 <div class="section-header">
     <div class="title">
-        <i class="icon icon-legal"></i>
+        <i class="icon icon-building"></i>
         @T("Admin.Catalog.Manufacturers")
     </div>
     <div class="options">
