--- a/src/Presentation/SmartStore.Web/Administration/Views/Measure/Weights.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Measure/Weights.cshtml
@@ -13,7 +13,7 @@
 <table class="adminContent">
     <tr>
         <td>
-            <b>@T("Admin.Configuration.Measures.Weights.Description")</b>
+            <div class="alert alert-warning">@T("Admin.Configuration.Measures.Weights.Description")</div>
         </td>
     </tr>
     <tr>
