--- a/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/List.cshtml
@@ -7,7 +7,7 @@
 }
 <div class="section-header">
     <div class="title">
-        <i class="icon icon-edit"></i>
+        <i class="icon icon-envelope-alt"></i>
         @T("Admin.ContentManagement.MessageTemplates")
     </div>
     <div class="options">
