--- a/src/Presentation/SmartStore.Web/Administration/Views/OnlineCustomer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/OnlineCustomer/List.cshtml
@@ -8,7 +8,7 @@
 }
 <div class="section-header">
     <div class="title">
-        <i class="icon icon-group"></i>
+        <i class="icon icon-signin"></i>
         @T("Admin.Customers.OnlineCustomers")
     </div>
     <div class="options">
