--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/BestsellersReport.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/BestsellersReport.cshtml
@@ -8,7 +8,7 @@
 {
     <div class="section-header">
         <div class="title">
-            <i class="icon icon-money"></i>
+            <i class="icon icon-thumbs-up"></i>
             @T("Admin.SalesReport.Bestsellers")
         </div>
         <div class="options">
