--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
@@ -59,7 +59,7 @@
 
         <div class="btn-group pull-right navbar-tools-group" style="margin-right: 5px">
             
-            <div class="btn-group">
+            <div class="btn-group pull-right">
                 <button class="btn btn-inverse dropdown-toggle navbar-tool" title='Aktionen' data-toggle="dropdown">
                     <i class="icon-cogs"></i>
                 </button>
