--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -283,6 +283,11 @@ input[type="checkbox"] {
 	margin-top: 1px \9;
 }
 
+th label {
+	font-weight: inherit;
+	font-size: inherit;
+}
+
 
 // NAV STYLES
 // ------------
