--- a/src/Presentation/SmartStore.Web/Administration/Views/ActivityLog/ListTypes.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ActivityLog/ListTypes.cshtml
@@ -28,17 +28,15 @@
                 .Name("activityLogType-grid")
                 .BindTo(Model.Data)
                         .Columns(columns =>
-                        {
-                            columns.Bound(x => x.Name)
-                                .Centered()
-                                .Width("50%");
-                            columns.Bound(x => x.Enabled)
-                                .Centered()
-                                .Template(x => Html.CheckBox("checkBox_" + x.Id.ToString(), x.Enabled, new { id = x.Id, @class = "checkboxGroups" }))
-                                .Title(T("Admin.Configuration.ActivityLog.ActivityLogType.Fields.Enabled").Text + "&nbsp<input id='mastercheckbox' type='checkbox'/>")
-                                .Width("50%")
-                                .HtmlAttributes(new { style = "text-align:center" })
-                                .HeaderHtmlAttributes(new { style = "text-align:center" });
+						{
+							columns.Bound(x => x.Enabled)
+								.Centered()
+								.Template(x => Html.CheckBox("checkBox_" + x.Id.ToString(), x.Enabled, new { id = x.Id, @class = "checkboxGroups" }))
+								.Title("<label class='checkbox'>" + "<input id='mastercheckbox' type='checkbox'/>" + T("Admin.Configuration.ActivityLog.ActivityLogType.Fields.Enabled").Text + "</label>")
+								.HtmlAttributes(new { style = "text-align:center" })
+								.HeaderHtmlAttributes(new { style = "text-align:center" });                    
+							columns.Bound(x => x.Name)
+                                .Width("100%");
                         })
                 .Footer(false)
 )
