--- a/src/Presentation/SmartStore.Web/Administration/Views/Measure/Dimensions.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Measure/Dimensions.cshtml
@@ -13,7 +13,7 @@
 <table class="adminContent">
     <tr>
         <td>
-            <b>@T("Admin.Configuration.Measures.Dimensions.Description")</b>
+            <div class="alert alert-warning">@T("Admin.Configuration.Measures.Dimensions.Description")</div>
         </td>
     </tr>
     <tr>
