--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -20,7 +20,10 @@
 					<i class="icon-download-alt"></i>&nbsp;@T("Admin.Orders.PdfInvoice")
 				</a>
             }
-            <button type="submit" id="order-delete" class="btn btn-danger"><i class="icon-trash icon-white"></i>&nbsp;@T("Admin.Common.Delete")</button>
+            <button type="submit" id="order-delete" class="btn btn-danger">
+				<i class="icon-trash icon-white"></i>
+				@T("Admin.Common.Delete")
+			</button>
             <input type="submit" id="btnRefreshPage" name="btnRefreshPage" style="display: none" />
         </div>
     </div>
