--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminLayout.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminLayout.cshtml
@@ -92,6 +92,7 @@
         bootstrapJsRoot + "bootstrap-tooltip.js",
         bootstrapJsRoot + "bootstrap-popover.js",
         bootstrapJsRoot + "bootstrap-tab.js",
+		bootstrapJsRoot + "bootstrap-typeahead.js",
         // Bootstrap custom
         bootstrapJsRoot + "custom/bootstrap-datepicker.js",
         // Shared UI
