--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -136,6 +136,14 @@ nav li {
 }
 
 
+// FORM STATES
+// ------------
+
+span.field-validation-error {
+	color: @errorText;
+}
+
+
 // WELL TWEAKS
 // ------------
 .well > *:first-child {
@@ -302,7 +310,7 @@ th label {
 .nav > li > a > [class^="icon-"] {
 	vertical-align: baseline;
 	margin-right: 4px;
-    color: @grayLight;
+    color: #727272;
 }
 
 .nav > li > a:hover > [class^="icon-"], 
