--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/Edit.cshtml
@@ -10,7 +10,7 @@
             @if (!String.IsNullOrEmpty(Model.PictureThumbnailUrl)) {
                 <img src="@Url.Content(Model.PictureThumbnailUrl)" class="img-polaroid" />
 			}
-            @T("Admin.Catalog.Products.EditProductDetails") - @Model.Name @Html.ActionLink("(" + T("Admin.Catalog.Products.BackToList") + ")", "List")
+            @T("Admin.Catalog.Products.EditProductDetails") - <span title="@Model.Name">@Model.Name.Truncate(45, "...")</span> @Html.ActionLink("(" + T("Admin.Catalog.Products.BackToList") + ")", "List")
         </div>
         <div class="options">
             <button type="submit" name="preview" value="preview" onclick="javascript:OpenWindow('@Url.RouteUrl("Product", new { SeName = Model.SeName })', 1000, 600, true); return false;" class="btn">
@@ -38,7 +38,6 @@
 @Html.DeleteConfirmation("product-delete")
 
 @*copy product form*@
-@*codehint: sm-edit*@
 @{Html.SmartStore().Window()
 		.Name("copyproduct-window")
 		.Title(T("Admin.Catalog.Products.Copy").Text)
