--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -13,10 +13,6 @@
 
 <script type="text/javascript">
 
-    var fieldBasePriceMeasureUnit;
-    var fieldBasePriceAmount;
-    var fieldBasePriceBaseAmount;
-
     $(document).ready(function () {
 
         $("#@Html.FieldIdFor(model => model.ProductTypeId)").change(toggleProductType);
@@ -30,21 +26,6 @@
         $("#@Html.FieldIdFor(model => model.IsRecurring)").click(toggleRecurring);
         $("#@Html.FieldIdFor(model => model.IsShipEnabled)").click(toggleShipping);
         $("#@Html.FieldIdFor(model => model.IsTaxExempt)").click(toggleTax);
-        $("#@Html.FieldIdFor(model => model.ManageInventoryMethodId)").change(toggleManageStock);
-        $("#@Html.FieldIdFor(model => model.BackorderModeId)").change(toggleManageStock);
-        $("#@Html.FieldIdFor(model => model.DisplayStockAvailability)").click(toggleManageStock);
-        $("#@Html.FieldIdFor(model => model.BasePriceEnabled)").click(toggleBasePrice);
-
-        fieldBasePriceMeasureUnit = $("#@Html.FieldIdFor(model => model.BasePriceMeasureUnit)");
-        fieldBasePriceAmount = $("#@Html.FieldIdFor(model => model.BasePriceAmount)");
-        fieldBasePriceBaseAmount = $("#@Html.FieldIdFor(model => model.BasePriceBaseAmount)");
-
-        fieldBasePriceMeasureUnit.on("change", getCurrentBasePrice);
-
-    	fieldBasePriceAmount.on("blur", getCurrentBasePrice);
-    	fieldBasePriceBaseAmount.on("blur", getCurrentBasePrice);
-
-    	getCurrentBasePrice();
 
     	toggleProductType();
         toggleRequireOtherProducts();
@@ -54,49 +35,12 @@
         toggleRecurring();
         toggleShipping();
         toggleTax();
-        toggleManageStock();
-        toggleBasePrice();
+        
     });
-
-    function getCurrentBasePrice() {
-        if (parseFloat(fieldBasePriceAmount.val()) > 0 && parseInt(fieldBasePriceBaseAmount.val()) > 0) {
-            $.ajax({
-                cache:false,
-                type: "POST",
-                url: "@(Url.Action("GetBasePrice", "Product"))",
-                data: {
-                    "productId" : @Model.Id,
-                    "basePriceMeasureUnit": fieldBasePriceMeasureUnit.val(),
-                    "basePriceAmount": fieldBasePriceAmount.val(),
-                    "basePriceBaseAmount": fieldBasePriceBaseAmount.val()
-                },
-                success: function (data) {
-                    $("#BasePriceAmountInfo").html(data.BasePrice);
-                },
-                error: function (xhr, ajaxOptions, thrownError){
-                    alert(thrownError);
-                }
-            });
-        }
-        return false;
-    }
-
-    function toggleBasePrice() {
-        if ($('#@Html.FieldIdFor(model => model.BasePriceEnabled)').is(':checked')) {
-            $('#pnlBasePriceBaseAmount').show();
-            $('#pnlBasePriceAmount').show();
-        }
-        else {
-            $('#pnlBasePriceBaseAmount').hide();
-            $('#pnlBasePriceAmount').hide();
-        }
-    }
 
     function toggleProductType() {
         var selectedProductTypeId = $("#@Html.FieldIdFor(model => model.ProductTypeId)").val();
-
         if (selectedProductTypeId == '@((int)ProductType.SimpleProduct)') {
-            $('#group-prices').show();
             $('#group-required-other-products').show();
             $('#group-giftcard').show();
             $('#group-downloads').show();
@@ -104,9 +48,9 @@
             $('#group-shipping').show();
             $('#group-tax').show();
             $('#group-inventory').show();
+            $('a[href=#tab-inventory]').parent().removeClass("hide"); // specified in _CreateOrUpdate.cshtml
         }
         else if (selectedProductTypeId == '@((int)ProductType.GroupedProduct)') {
-            $('#group-prices').hide();
             $('#group-required-other-products').hide();
             $('#group-giftcard').hide();
             $('#group-downloads').hide();
@@ -114,8 +58,10 @@
             $('#group-shipping').hide();
             $('#group-tax').hide();
             $('#group-inventory').hide();
+            $('a[href=#tab-inventory]').parent().addClass("hide"); // specified in _CreateOrUpdate.cshtml
         }
         else if (selectedProductTypeId == '@((int)ProductType.BundledProduct)') {
+        	$('a[href=#tab-inventory]').parent().addClass("hide"); // specified in _CreateOrUpdate.cshtml
         }
     }
 
@@ -237,71 +183,6 @@
             $('#pnlTaxCategory').show();
         }
     }
-
-    function toggleManageStock() {
-        var selectedManageInventoryMethodId = $("#@Html.FieldIdFor(model => model.ManageInventoryMethodId)").val();
-
-        if (selectedManageInventoryMethodId == '@((int)ManageInventoryMethod.DontManageStock)') {
-            $('#pnlStockQuantity').hide();
-            $('#pnlDisplayStockAvailability').hide();
-            $('#pnlDisplayStockQuantity').hide();
-            $('#pnlMinStockQuantity').hide();
-            $('#pnlLowStockActivity').hide();
-            $('#pnlNotifyForQuantityBelow').hide();
-            $('#pnlAllowBackInStockSubscriptions').hide();
-            $('#pnlBackorders').hide();
-        }
-        else if (selectedManageInventoryMethodId == '@((int)ManageInventoryMethod.ManageStock)') {
-            $('#pnlStockQuantity').show();
-            $('#pnlDisplayStockAvailability').show();
-
-            if ($('#@Html.FieldIdFor(model => model.DisplayStockAvailability)').is(':checked')) {
-                $('#pnlDisplayStockQuantity').show();
-            }
-            else {
-                $('#pnlDisplayStockQuantity').hide();
-            }
-
-            $('#pnlMinStockQuantity').show();
-            $('#pnlLowStockActivity').show();
-            $('#pnlNotifyForQuantityBelow').show();
-            $('#pnlBackorders').show();
-            var selectedBackorderModeId = $("#@Html.FieldIdFor(model => model.BackorderModeId)").val();
-            if (selectedBackorderModeId == '@((int)BackorderMode.NoBackorders)') {
-                //no backorders
-                $('#pnlAllowBackInStockSubscriptions').show();
-            }
-            else {
-                //backorders are enabled
-                $('#pnlAllowBackInStockSubscriptions').hide();
-            }
-        }
-        else if (selectedManageInventoryMethodId == '@((int)ManageInventoryMethod.ManageStockByAttributes)') {
-            $('#pnlStockQuantity').hide();
-            $('#pnlDisplayStockAvailability').show();
-            if ($('#@Html.FieldIdFor(model => model.DisplayStockAvailability)').is(':checked')) {
-                $('#pnlDisplayStockQuantity').show();
-            }
-            else {
-                $('#pnlDisplayStockQuantity').hide();
-            }
-            $('#pnlMinStockQuantity').hide();
-            $('#pnlLowStockActivity').hide();
-            $('#pnlNotifyForQuantityBelow').hide();
-            $('#pnlAllowBackInStockSubscriptions').hide();
-            $('#pnlBackorders').hide();
-        }
-        else {
-            $('#pnlStockQuantity').hide();
-            $('#pnlDisplayStockAvailability').hide();
-            $('#pnlDisplayStockQuantity').hide();
-            $('#pnlMinStockQuantity').hide();
-            $('#pnlLowStockActivity').hide();
-            $('#pnlNotifyForQuantityBelow').hide();
-            $('#pnlAllowBackInStockSubscriptions').hide();
-            $('#pnlBackorders').hide();
-        }
-    }
 </script>
 
 <div style="margin-bottom: 30px;overflow:hidden">
@@ -354,113 +235,6 @@
 			<td class="adminData">
 				@Html.DropDownListFor(model => model.ProductTemplateId, Model.AvailableProductTemplates)
 				@Html.ValidationMessageFor(model => model.ProductTemplateId)
-			</td>
-		</tr>
-	</table>
-
-	<table class="adminContent" id="group-inventory">
-		<tr class="adminSeparator">
-			<td colspan="2">
-				<hr />
-			</td>
-		</tr>
-		<tr>
-			<td class="adminTitle">
-				@Html.SmartLabelFor(model => model.ManageInventoryMethodId)
-			</td>
-			<td class="adminData">
-				@Html.DropDownListFor(model => model.ManageInventoryMethodId, Model.AvailableManageInventoryMethods)
-				@Html.ValidationMessageFor(model => model.ManageInventoryMethodId)
-			</td>
-		</tr>
-		<tr id="pnlStockQuantity">
-			<td class="adminTitle">
-				@Html.SmartLabelFor(model => model.StockQuantity)
-			</td>
-			<td class="adminData">
-				@Html.EditorFor(model => model.StockQuantity)
-				@Html.ValidationMessageFor(model => model.StockQuantity)
-			</td>
-		</tr>
-		<tr id="pnlDisplayStockAvailability">
-			<td class="adminTitle">
-				@Html.SmartLabelFor(model => model.DisplayStockAvailability)
-			</td>
-			<td class="adminData">
-				@Html.EditorFor(model => model.DisplayStockAvailability)
-				@Html.ValidationMessageFor(model => model.DisplayStockAvailability)
-			</td>
-		</tr>
-		<tr id="pnlDisplayStockQuantity">
-			<td class="adminTitle">
-				@Html.SmartLabelFor(model => model.DisplayStockQuantity)
-			</td>
-			<td class="adminData">
-				@Html.EditorFor(model => model.DisplayStockQuantity)
-				@Html.ValidationMessageFor(model => model.DisplayStockQuantity)
-			</td>
-		</tr>
-		<tr id="pnlMinStockQuantity">
-			<td class="adminTitle">
-				@Html.SmartLabelFor(model => model.MinStockQuantity)
-			</td>
-			<td class="adminData">
-				@Html.EditorFor(model => model.MinStockQuantity)
-				@Html.ValidationMessageFor(model => model.MinStockQuantity)
-			</td>
-		</tr>
-		<tr id="pnlLowStockActivity">
-			<td class="adminTitle">
-				@Html.SmartLabelFor(model => model.LowStockActivityId)
-			</td>
-			<td class="adminData">
-				@Html.DropDownListFor(model => model.LowStockActivityId, ((LowStockActivity)Model.LowStockActivityId).ToSelectList())
-				@Html.ValidationMessageFor(model => model.LowStockActivityId)
-			</td>
-		</tr>
-		<tr id="pnlNotifyForQuantityBelow">
-			<td class="adminTitle">
-				@Html.SmartLabelFor(model => model.NotifyAdminForQuantityBelow)
-			</td>
-			<td class="adminData">
-				@Html.EditorFor(model => model.NotifyAdminForQuantityBelow)
-				@Html.ValidationMessageFor(model => model.NotifyAdminForQuantityBelow)
-			</td>
-		</tr>
-		<tr id="pnlBackorders">
-			<td class="adminTitle">
-				@Html.SmartLabelFor(model => model.BackorderModeId)
-			</td>
-			<td class="adminData">
-				@Html.DropDownListFor(model => model.BackorderModeId, ((BackorderMode)Model.BackorderModeId).ToSelectList())
-				@Html.ValidationMessageFor(model => model.BackorderModeId)
-			</td>
-		</tr>
-		<tr id="pnlAllowBackInStockSubscriptions">
-			<td class="adminTitle">
-				@Html.SmartLabelFor(model => model.AllowBackInStockSubscriptions)
-			</td>
-			<td class="adminData">
-				@Html.EditorFor(model => model.AllowBackInStockSubscriptions)
-				@Html.ValidationMessageFor(model => model.AllowBackInStockSubscriptions)
-			</td>
-		</tr>
-		<tr>
-			<td class="adminTitle">
-				@Html.SmartLabelFor(model => model.OrderMinimumQuantity)
-			</td>
-			<td class="adminData">
-				@Html.EditorFor(model => model.OrderMinimumQuantity)
-				@Html.ValidationMessageFor(model => model.OrderMinimumQuantity)
-			</td>
-		</tr>
-		<tr>
-			<td class="adminTitle">
-				@Html.SmartLabelFor(model => model.OrderMaximumQuantity)
-			</td>
-			<td class="adminData">
-				@Html.EditorFor(model => model.OrderMaximumQuantity)
-				@Html.ValidationMessageFor(model => model.OrderMaximumQuantity)
 			</td>
 		</tr>
 	</table>
