Minor CSS change

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -645,6 +645,17 @@ td.adminTitle > .ctl-label {
 	}
 }
 
+.admin-config-group {
+	margin-bottom: 20px;
+}
+
+.admin-config-group .title {
+	font-size: 1.2em;
+	color: #999;
+	margin-bottom: 5px;
+}
+
+
 .well td.adminTitle {
     width: 260px;
 }
