--- a/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.cshtml
@@ -18,14 +18,8 @@
     Html.AddTitleParts(!String.IsNullOrEmpty(Model.MetaTitle) ? Model.MetaTitle : Model.Name);
     Html.AddMetaDescriptionParts(Model.MetaDescription);
     Html.AddMetaKeywordParts(Model.MetaKeywords);
-    
-    //codehint: sm-add
-    Html.AddCssFileParts("~/Content/smartstore.smartgallery.css");
 
-    Html.AddScriptParts(
-        "~/Scripts/jquery.elevatezoom.js",
-        "~/Scripts/smartstore.smartgallery.js",
-        "~/Scripts/public.product-detail.js");
+    Html.AddScriptParts("~/Scripts/public.product-detail.js");
     
     var canonicalUrlsEnabled = EngineContext.Current.Resolve<SeoSettings>().CanonicalUrlsEnabled;
     if (canonicalUrlsEnabled)
@@ -34,8 +28,6 @@
         Html.AddCanonicalUrlParts(productUrl);
     }
 }
-
-@Html.Partial("BsImageDialog")
 
 <div class="page product-details-page">
 
