--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminLayout.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminLayout.cshtml
@@ -22,9 +22,6 @@
         adminPageTitle = ViewBag.Title + " / ";
     }
     adminPageTitle += T("Admin.PageTitle").Text;
-
-    // admin styles
-    //Html.AddCssFileParts(false, "~/Administration/Content/theme.less");
     
     // add css assets
     var telerikCssRootPath = "~/Content/2012.2.607/";
@@ -39,8 +36,8 @@
     // add js assets (Head)
     Html.AppendScriptParts(ResourceLocation.Head,
         "~/Scripts/modernizr-2.7.2.js",
-        "~/Scripts/jquery-2.1.1.js",
-		"~/Scripts/jquery-migrate-1.2.1.js",
+		// Telerik doesn't like jQuery 1.9+, a shame!
+        "~/Administration/Scripts/jquery-1.8.3.js",
         "~/Scripts/globalize/globalize.js");
         
     Html.AddScriptParts(ResourceLocation.Head, true,
@@ -165,16 +162,15 @@
 
     </div>
 
-
-    <!--These need to be at the end of the page to ensure that all the controls requiring scripts have been rendered-->
-    @(Html.Telerik().ScriptRegistrar()
-            .jQuery(false)
-            .jQueryValidation(false)
-            .Globalization(true)
-            )
-
     @Html.SmartCssFiles(this.Url, ResourceLocation.Foot)
     @Html.SmartScripts(this.Url, ResourceLocation.Foot)
+
+	<!--These need to be at the end of the page to ensure that all the controls requiring scripts have been rendered-->
+	@(Html.Telerik().ScriptRegistrar()
+			.jQuery(false)
+			.jQueryValidation(false)
+			.Globalization(true)
+	)
 
 </body>
 </html>
